--- a/Web/web_service_system/package.json
+++ b/Web/web_service_system/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "core-js": "^3.8.3",
     "element-plus": "^2.7.2",
     "vue": "^3.2.13",
